# docker-buildkit-cargo-example

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
