[package]
name = "Docker-cargo"
description = "This is the minimal example of the Docker multi-stage build with BuildKit caching."
authors = ["k-khr <22492054+k-khr@users.noreply.github.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "^0.8.0"

[[bin]]
name = "test"
path = "src/main.rs"
doc = false
